(lang dune 3.17)

(name camltography)

(generate_opam_files true)

(source
 (github johnbntn/camltography))

(authors "John Benton <jbenton4494@gmail.com>")

(maintainers "John Benton <jbenton4494@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name camltography)
 (synopsis "Learn Cryptography with Ocaml")
 (description "A longer description")
 (depends ocaml base owl)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
